Tune java parameters